[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/backgroud.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Black.png" type="Texture" id=2]
[ext_resource path="res://assets/White.png" type="Texture" id=3]
[ext_resource path="res://assets/computer.png" type="Texture" id=4]
[ext_resource path="res://assets/human.png" type="Texture" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
rect_scale = Vector2( 0.187, 0.75 )
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 24.0
margin_top = 112.0
margin_right = 120.0
margin_bottom = 126.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "White Wins!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 32.0
margin_top = 200.0
margin_right = 160.0
margin_bottom = 584.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackHuman" type="TextureButton" parent="Control"]
margin_right = 64.0
margin_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="Control/BlackHuman"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Piece" type="TextureRect" parent="Control/BlackHuman"]
margin_left = 8.0
margin_top = 72.0
margin_right = 648.0
margin_bottom = 712.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackComputer" type="TextureButton" parent="Control"]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="Control/BlackComputer"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Piece" type="TextureRect" parent="Control/BlackComputer"]
visible = false
margin_left = 8.0
margin_top = 72.0
margin_right = 648.0
margin_bottom = 712.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteHuman" type="TextureButton" parent="Control"]
margin_top = 128.0
margin_right = 64.0
margin_bottom = 256.0

[node name="TextureRect" type="TextureRect" parent="Control/WhiteHuman"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Piece" type="TextureRect" parent="Control/WhiteHuman"]
visible = false
margin_left = 8.0
margin_top = 72.0
margin_right = 648.0
margin_bottom = 712.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteComputer" type="TextureButton" parent="Control"]
margin_left = 64.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 256.0

[node name="TextureRect" type="TextureRect" parent="Control/WhiteComputer"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Piece" type="TextureRect" parent="Control/WhiteComputer"]
margin_left = 8.0
margin_top = 72.0
margin_right = 648.0
margin_bottom = 712.0
rect_scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Control"]
margin_left = -8.0
margin_top = 320.0
margin_right = 88.0
margin_bottom = 340.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Control"]
visible = false
margin_left = -8.0
margin_top = 272.0
margin_right = 88.0
margin_bottom = 292.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="Control"]
visible = false
margin_left = -7.99999
margin_top = 272.0
margin_right = 88.0
margin_bottom = 292.0
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/BlackHuman" to="." method="_on_BlackHuman_pressed"]
[connection signal="pressed" from="Control/BlackComputer" to="." method="_on_BlackComputer_pressed"]
[connection signal="pressed" from="Control/WhiteHuman" to="." method="_on_WhiteHuman_pressed"]
[connection signal="pressed" from="Control/WhiteComputer" to="." method="_on_WhiteComputer_pressed"]
[connection signal="pressed" from="Control/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/StopButton" to="." method="_on_StopButton_pressed"]
