[gd_scene load_steps=3 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[node name="Main" type="Node2D"]

[node name="Board" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 64 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 1136.0
margin_top = 24.0
margin_right = 1176.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="HUD"]

[node name="Message" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -120.0
margin_right = -320.0
margin_bottom = -80.0
rect_scale = Vector2( 4, 4 )
text = "Your score is 120
Highscore 100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 153.0
margin_right = -63.0
margin_bottom = 173.0
rect_scale = Vector2( 4, 4 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="win" from="Board" to="HUD" method="_on_Board_win"]
[connection signal="restart" from="HUD" to="Board" method="_on_HUD_restart"]
[connection signal="timeout" from="HUD/ScoreTimer" to="HUD" method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="HUD/RestartButton" to="HUD" method="_on_RestartButton_pressed"]
